--- a/packages/framework-provider-aws-infrastructure/package.json
+++ b/packages/framework-provider-aws-infrastructure/package.json
@@ -32,6 +32,7 @@
     "@aws-cdk/aws-s3-deployment": "1.99.0",
     "@boostercloud/framework-provider-aws": "^0.26.12",
     "@boostercloud/framework-types": "^0.26.12",
+    "@boostercloud/framework-common-helpers": "^0.26.12",
     "aws-cdk": "1.99.0",
     "aws-sdk": "2.853.0",
     "colors": "^1.4.0"
@@ -53,6 +54,7 @@
     "@types/aws-lambda": "8.10.48",
     "@types/aws-sdk": "2.7.0",
     "@types/faker": "5.1.5",
+    "@types/rewire": "^2.5.28",
     "chai": "4.2.0",
     "chai-as-promised": "7.1.1",
     "faker": "5.1.0",
