--- a/packages/framework-provider-local-infrastructure/package.json
+++ b/packages/framework-provider-local-infrastructure/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@boostercloud/framework-provider-local": "^0.26.12",
     "@boostercloud/framework-types": "^0.26.12",
+    "@boostercloud/framework-common-helpers": "^0.26.12",
     "cors": "2.8.5",
     "express": "^4.17.1",
     "nedb": "^1.8.0",
